[tool.poetry]
name = "body"
version = "0.1.0"
description = ""
authors = ["kota <52403688+yashikota@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "^0.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
